v0.11.1/_sources/generated/statsmodels.genmod.generalized_estimating_equations.OrdinalGEE.rst.txt
statsmodels.genmod.generalized\_estimating\_equations.OrdinalGEE
================================================================

.. currentmodule:: statsmodels.genmod.generalized_estimating_equations

.. autoclass:: OrdinalGEE
   :exclude-members:

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~OrdinalGEE.cluster_list
      ~OrdinalGEE.compare_score_test
      ~OrdinalGEE.estimate_scale
      ~OrdinalGEE.fit
      ~OrdinalGEE.fit_regularized
      ~OrdinalGEE.from_formula
      ~OrdinalGEE.mean_deriv
      ~OrdinalGEE.mean_deriv_exog
      ~OrdinalGEE.predict
      ~OrdinalGEE.qic
      ~OrdinalGEE.setup_ordinal
      ~OrdinalGEE.update_cached_means
   
   
   
   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~OrdinalGEE.cached_means
      ~OrdinalGEE.endog_names
      ~OrdinalGEE.exog_names
   
   
   